done with everythin

--- a/web1.html
+++ b/web1.html
@@ -166,22 +166,23 @@
   
           <!-- Project 2 -->
           <div class="project-card">
-              <img src="project2-thumbnail.jpg" alt="Milestones App">
+              <img src="stock.png" alt="Milestones App">
               <h3></h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ducimus pariatur eos modi vero vitae quae impedit! Illum quisquam aliquam explicabo ea sapiente dolorem labore illo totam nesciunt, distinctio alias deserunt deleniti, officia sequi facilis praesentium perspiciatis? Dolore earum consequatur at, porro laboriosam officia, similique aperiam quod explicabo itaque quam.</p>
+              <p> Stock price prediction is based on Machine learning algorithm wghere it preicts the price of a given stock from yfinance datasets </p>
               <div class="tech-stack">
-                  <span>React</span>
-                  <span>Express</span>
-                  <span>Node</span>
-                  <span>MongoDB</span>
-                  <span>Web3.js</span>
-                  <span>Solidity</span>
-                  <span>DaisyUI</span>
+                  <span>Python</span>
+                  <span>Machine learning</span>
+                  <span>keras</span>
+                  <span>numpy</span>
+                  <span>pandas</span>
+                  <span>matplotlib</span>
+                  <span>streamlit</span>
               </div>
               <div class="project-buttons">
-                  <a href="#" class="btn">Demo</a>
-                  <a href="#" class="btn">Source</a>
-              </div>
+                <!-- Replace the URL below with your actual demo link -->
+                <a href="http://localhost:8501/" class="btn" target="_blank">Demo</a>
+                <a href="https://github.com/DhanushU2468/stock-price-prediction.git" class="btn" target="_blank">Source</a>
+            </div>
           </div>
   
           <!-- Project 3 -->
