changed the certificates

--- a/web1.html
+++ b/web1.html
@@ -207,7 +207,7 @@
   
     <!-- Certifications Section -->
     <div class="certifications" id="certifications">
-        <h1>CERTIFICATIONS</h1>
+        <a href="certificates.html"><h1>Certifications</h1></a>
         <p>Details of certifications can go here.</p>
     </div>
 
